アイコンの修正

--- a/front/src/app/pages/book/book.component.html
+++ b/front/src/app/pages/book/book.component.html
@@ -37,7 +37,10 @@
   <ng-template #notExistTemplate>
     <section class="not-exist">
       <div>
-        <mat-icon class="not-exist-icon">sentiment_very_dissatisfied</mat-icon>
+        <mat-icon
+          class="not-exist-icon"
+          fontIcon="sentiment_very_dissatisfied"
+        ></mat-icon>
       </div>
       <div class="not-exist-content">この単語帳は存在しません</div>
     </section>
