--- a/front/src/app/pages/home/home.component.html
+++ b/front/src/app/pages/home/home.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="top-actions">
     <button mat-raised-button color="primary" (click)="onOpenDialog()">
-      <mat-icon>system_update</mat-icon>Google Sheetsをインポート
+      <mat-icon fontIcon="system_update"></mat-icon>Google Sheetsをインポート
     </button>
     <a
       href="https://cedar-impatiens-49c.notion.site/Moment-9d9e6093566a4f02a78004ac048b27b5"
@@ -14,7 +14,7 @@
       alt="ドキュメントを見る"
       mat-raised-button
     >
-      <mat-icon>description</mat-icon>
+      <mat-icon fontIcon="description"></mat-icon>
       ドキュメントを見る
     </a>
   </div>
@@ -51,6 +51,6 @@
     target="_blank"
     mat-raised-button
     color="accent"
-    >お問合せ <mat-icon>open_in_new</mat-icon></a
-  >
+    >お問合せ <mat-icon fontIcon="open_in_new"></mat-icon
+  ></a>
 </section>
