--- a/front/src/app/parts/book-settings-dialog/book-settings-dialog.component.html
+++ b/front/src/app/parts/book-settings-dialog/book-settings-dialog.component.html
@@ -2,7 +2,7 @@
   <div class="dialog-header">
     設定
     <button mat-icon-button (click)="onClose()" cdkFocusInitial>
-      <mat-icon>close</mat-icon>
+      <mat-icon fontIcon="close"></mat-icon>
     </button>
   </div>
   <div class="dialog-content" mat-dialog-content>
