--- a/front/src/app/parts/download-book/download-book.component.html
+++ b/front/src/app/parts/download-book/download-book.component.html
@@ -8,7 +8,7 @@
       (click)="onClose()"
       cdkFocusInitial
     >
-      <mat-icon>close</mat-icon>
+      <mat-icon fontIcon="close"></mat-icon>
     </button>
   </div>
   <div class="dialog-content">
@@ -28,7 +28,7 @@
               cdkCopyToClipboard="spreadsheet-reader@wk-moment.iam.gserviceaccount.com"
             >
               spreadsheet-reader@wk-moment.iam.gserviceaccount.com
-              <mat-icon>content_copy</mat-icon>
+              <mat-icon fontIcon="content_copy"></mat-icon>
             </button>
             を閲覧者として共有する
           </li>
