--- a/front/src/app/parts/header/header.component.html
+++ b/front/src/app/parts/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <div class="left">
     <a mat-icon-button *ngIf="url" [routerLink]="url">
-      <mat-icon>arrow_back</mat-icon>
+      <mat-icon fontIcon="arrow_back"></mat-icon>
     </a>
     <div class="title">{{ title }}</div>
   </div>
@@ -11,7 +11,7 @@
       target="_blank"
       mat-icon-button
     >
-      <mat-icon>description</mat-icon>
+      <mat-icon fontIcon="description"></mat-icon>
     </a>
   </div>
 </header>
