--- a/front/src/app/parts/mean-word/mean-word.component.html
+++ b/front/src/app/parts/mean-word/mean-word.component.html
@@ -8,7 +8,7 @@
         aria-label="Play"
         (click)="onPlayWord()"
       >
-        <mat-icon>play_arrow</mat-icon>
+        <mat-icon fontIcon="play_arrow"></mat-icon>
       </button>
     </div>
     <button
@@ -17,7 +17,7 @@
       aria-label="Close"
       (click)="onClose()"
     >
-      <mat-icon>close</mat-icon>
+      <mat-icon fontIcon="close"></mat-icon>
     </button>
   </div>
   <div class="dialog-content">
