--- a/front/src/app/parts/viewer-setting-dialog/viewer-setting-dialog.component.html
+++ b/front/src/app/parts/viewer-setting-dialog/viewer-setting-dialog.component.html
@@ -2,7 +2,7 @@
   <div class="dialog-header">
     設定
     <button mat-icon-button (click)="onClose()" cdkFocusInitial>
-      <mat-icon>close</mat-icon>
+      <mat-icon fontIcon="close"></mat-icon>
     </button>
   </div>
   <div class="dialog-content" mat-dialog-content>
@@ -39,16 +39,16 @@
         target="_blank"
         mat-raised-button
         color="primary"
-        >使い方 <mat-icon>open_in_new</mat-icon></a
-      >
+        >使い方 <mat-icon fontIcon="open_in_new"></mat-icon
+      ></a>
       <a
         class="action-button"
         href="https://docs.google.com/forms/d/16Q8LlY_gQOyZyKbb6y4hdZwuk1Qs0U658vTKjgI-Lzs"
         target="_blank"
         mat-raised-button
         color="accent"
-        >お問合せ <mat-icon>open_in_new</mat-icon></a
-      >
+        >お問合せ <mat-icon fontIcon="open_in_new"></mat-icon
+      ></a>
     </div>
   </div>
 </section>
