アイコンの修正

--- a/front/src/app/pages/books/books.component.html
+++ b/front/src/app/pages/books/books.component.html
@@ -28,7 +28,7 @@
     *ngIf="isInitLoaded && !isLoading && books.length === 0"
   >
     <div>
-      <mat-icon class="not-exist-icon">mood</mat-icon>
+      <mat-icon class="not-exist-icon" fontIcon="mood"></mat-icon>
     </div>
     <div class="not-exist-content">単語帳がありません。</div>
     <div class="not-exist-content">単語帳をインポートしてください。</div>
