--- a/front/src/app/pages/sentense-viewer/sentense-viewer.component.scss
+++ b/front/src/app/pages/sentense-viewer/sentense-viewer.component.scss
@@ -6,8 +6,12 @@
   grid-template-rows: 1fr 8rem;
   height: 100%;
 }
-.swiper {
+swiper-container {
   width: 100%;
+  height: 100%;
+}
+swiper-slide {
+  overflow: hidden;
 }
 .card-content {
   width: 100%;
