合成音声の表示する名前を変更する

--- a/front/src/app/parts/viewer-setting-dialog/viewer-setting-dialog.component.html
+++ b/front/src/app/parts/viewer-setting-dialog/viewer-setting-dialog.component.html
@@ -20,7 +20,7 @@
           <mat-option
             *ngFor="let voice of voiceOptions"
             [value]="voice.voiceURI"
-            >{{ voice.voiceURI }}</mat-option
+            >{{ voice.name }}</mat-option
           >
         </mat-select>
       </mat-form-field>
