--- a/front/src/app/pages/sentense-viewer/sentense-viewer.component.scss
+++ b/front/src/app/pages/sentense-viewer/sentense-viewer.component.scss
@@ -82,7 +82,8 @@ swiper-slide {
 .slider {
   position: absolute;
   top: -24px;
-  left: 0;
+  left: 1rem;
+  width: 97vw;
 }
 .action-buttons-item {
   button {
