--- a/front/src/style/variable.scss
+++ b/front/src/style/variable.scss
@@ -14,27 +14,27 @@
 @mixin dialog-host {
   display: block;
   background: color.$bg-color;
-  border-radius: 8px 8px 0 0;
-  padding: 8px 16px 16px;
+  padding: 1rem 0.4rem 0;
   width: 100vw;
   height: 80vh;
   box-sizing: border-box;
   animation: 800ms ease-in-out 0ms 1 normal none running dialog-enter;
+  overflow-y: scroll;
 }
 @mixin dialog-wrapper {
   height: 100%;
 }
 @mixin dialog-header {
-  height: 5rem;
+  height: 2rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
   font-size: 1.4rem;
   font-weight: bold;
+  margin-bottom: 1rem;
 }
 @mixin dialog-content {
-  height: calc(100% - 5rem);
-  overflow-y: scroll;
+  height: calc(100% - 2rem);
 }
 
 @mixin not-exist {
