--- a/front/src/app/pages/sentense-viewer/sentense-viewer.component.scss
+++ b/front/src/app/pages/sentense-viewer/sentense-viewer.component.scss
@@ -76,10 +76,11 @@ swiper-slide {
   justify-content: space-between;
   flex-direction: inherit;
   padding: 0 16px;
+  position: relative;
 }
 
 .slider {
-  position: fixed;
+  position: absolute;
   bottom: 6.4rem;
   left: 0.5rem;
   right: 0.5rem;
