編集できるようにする

--- a/front/src/app/pages/sentense-viewer/sentense-viewer.component.html
+++ b/front/src/app/pages/sentense-viewer/sentense-viewer.component.html
@@ -83,7 +83,7 @@
         </div>
 
         <div class="action-buttons-item">
-          <button mat-mini-fab aria-label="編集" (click)="edit()">
+          <button mat-mini-fab aria-label="編集" (click)="onOpenEditor()">
             <mat-icon fontIcon="edit"></mat-icon>
           </button>
         </div>
