編集に失敗したときにスナックバーを出す1

--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -87,7 +87,11 @@ body {
   align-items: flex-end !important;
 }
 
-.warn-snackbar {
-  color: #fff;
-  background-color: #f44336;
+.mdc-snackbar {
+  &.warn-snackbar {
+    .mdc-snackbar__surface {
+      color: #fff;
+      background-color: #f44336;
+    }
+  }
 }
