--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -1,9 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @use "./style/theme.scss";
 @use "./style/color.scss" as color;
-@import "swiper/scss";
-@import "swiper/scss/navigation";
-@import "swiper/scss/pagination";
+@import "keen-slider/keen-slider.scss";
 
 /*
   Josh's Custom CSS Reset
