編集画面のフォーカスを最初は閉じるボタンにする

--- a/front/src/app/parts/editor/editor.component.html
+++ b/front/src/app/parts/editor/editor.component.html
@@ -6,6 +6,7 @@
       color="primary"
       aria-label="Close"
       (click)="onClose()"
+      cdkFocusInitial
     >
       <mat-icon fontIcon="close"></mat-icon>
     </button>
