ローディングをぐるぐるではなく、スナックバーで文字にする

--- a/front/src/app/pages/book/book.component.html
+++ b/front/src/app/pages/book/book.component.html
@@ -1,8 +1,4 @@
-<ng-container *ngIf="isLoading; else elseTemplate">
-  <div class="loading">
-    <mat-spinner></mat-spinner>
-  </div>
-</ng-container>
+<ng-container *ngIf="isLoading; else elseTemplate"> </ng-container>
 <ng-template #elseTemplate>
   <ng-container *ngIf="isExist; else notExistTemplate">
     <div class="sub-header">
