--- a/front/src/app/pages/books/books.component.html
+++ b/front/src/app/pages/books/books.component.html
@@ -23,17 +23,11 @@
       </mat-card></a
     >
   </div>
-  <div
-    class="not-exist"
-    *ngIf="isInitLoaded && !isLoading && books.length === 0"
-  >
+  <div class="not-exist" *ngIf="isInitLoaded && books.length === 0">
     <div>
       <mat-icon class="not-exist-icon" fontIcon="mood"></mat-icon>
     </div>
     <div class="not-exist-content">単語帳がありません。</div>
     <div class="not-exist-content">単語帳をインポートしてください。</div>
-  </div>
-  <div *ngIf="isLoading">
-    <mat-spinner></mat-spinner>
   </div>
 </section>
