共有先のサービスアカウントのアドレスをコピーする

--- a/front/src/app/parts/book-settings-dialog/book-settings-dialog.component.html
+++ b/front/src/app/parts/book-settings-dialog/book-settings-dialog.component.html
@@ -12,6 +12,7 @@
         mat-raised-button
         [href]="'https://docs.google.com/spreadsheets/d/' + data.sheetId"
         target="_blank"
+        class="sheet-button"
         alt="Google Sheets"
       >
         <mat-icon fontIcon="open_in_new"></mat-icon>
