--- a/front/src/app/parts/download-book/download-book.component.html
+++ b/front/src/app/parts/download-book/download-book.component.html
@@ -24,6 +24,15 @@
         <mat-icon fontIcon="description"></mat-icon>
         詳しい方法を確認する
       </a>
+      <button
+        mat-raised-button
+        color="primary"
+        class="copy-button"
+        (click)="onCopyAddress()"
+      >
+        <mat-icon fontIcon="content_copy" class="copy-icon"></mat-icon>
+        Google Sheetsを共有するアカウントの<br />アドレスをコピーする
+      </button>
       <section>
         <form [formGroup]="form" class="form">
           <mat-form-field appearance="fill">
